Fixed tables from stretching
now can have posts with loooong content

--- a/static/styles/view21.css
+++ b/static/styles/view21.css
@@ -2,6 +2,8 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  table-layout: fixed;
+  white-space: nowrap;
 }
 
 td, th {
@@ -9,6 +11,22 @@ td, th {
   text-align: left;
   padding: 8px;
   width: 50%;
+}
+
+td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.row-title {width: 30%;}
+
+.row-content {
+  width: 50%;
+}
+
+.row-delete {
+  width: 20%;
 }
 
 tr:nth-child(even) {
